--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # The directory Mix will write compiled artifacts to.
 /_build/
 
-# .DS_Store
+# f-ing .DS_Store
 .DS_Store
 
 # If you run "mix test --cover", coverage assets end up here.
